@@ -92,7 +92,7 @@ death_penalty_job: 100
 zeny_penalty: 0
 
 // Will display experience gained from killing a monster. (Note 1)
-disp_experience: yes
+disp_experience: no
 
 // Will display zeny earned (from mobs, trades, etc) (Note 1)
 disp_zeny: no
